--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "test": "vue-cli-service serve --mode test",
     "lint": "vue-cli-service lint"
   },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
@@ -27,6 +32,8 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "mockjs": "^1.0.1-beta3",
