--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-pxtorem": "^4.0.1",
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.6",
+    "vue-click-outside": "^1.0.7",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
