--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
 NODE_ENV = "test"
-VUE_APP_BASE_URL  = "https://easy-mock.com/mock/5c4c50b9888ef15de01bec2c/api"
+VUE_APP_BASE_URL  = "http://api.cmall.world"
