--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build --mode production",
-    "test": "vue-cli-service serve --mode test",
+    "test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint"
   },
   "config": {
