fix(:art: 改进代码结构/代码格式): 增加 standard babel-eslint
add babel-eslint

--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build --mode production",
     "test": "vue-cli-service build --mode test",
+    "standard": "standard \"jsbundles/**/*.js\" \"src/**/*.js\" \"components/**/*.js\"",
+    "standfix": "standard \"jsbundles/**/*.js\" \"src/**/*.js\" \"components/**/*.js\" --fix",
     "lint": "vue-cli-service lint"
   },
+  "standard": { "parser": "babel-eslint" },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
