--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "qrcodejs2": "0.0.2",
     "vant": "^2.0.0-beta.5",
     "vconsole": "^3.3.0",
     "vue": "^2.6.10",
