--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
