--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vconsole": "^3.3.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
