--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "qrcodejs2": "0.0.2",
     "vant": "^2.0.0-beta.5",
     "vconsole": "^3.3.0",
+    "vee-validate": "^3.0.5",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
     "vue-clipboard2": "^0.3.1",
