--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "vue-cli-service build --mode test",
     "standard": "standard \"jsbundles/**/*.js\" \"src/**/*.js\" \"components/**/*.js\"",
     "standfix": "standard \"jsbundles/**/*.js\" \"src/**/*.js\" \"components/**/*.js\" --fix",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "standard": {
     "parser": "babel-eslint"
