--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "sass-loader": "^7.1.0",
     "svg-sprite-loader": "^4.1.6",
     "vue-click-outside": "^1.0.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.5.0"
   },
   "postcss": {
     "plugins": {
