--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "standard": "standard \"jsbundles/**/*.js\" \"src/**/*.js\" \"components/**/*.js\"",
     "standfix": "standard \"jsbundles/**/*.js\" \"src/**/*.js\" \"components/**/*.js\" --fix",
     "lint": "vue-cli-service lint",
+    "dll": "webpack -p --progress --config webpack.dll.config.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "standard": {
@@ -39,9 +40,11 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "@vue/eslint-config-standard": "^4.0.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-eslint": "^10.0.1",
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.0.3",
     "compression-webpack-plugin": "^3.0.0",
     "cz-conventional-changelog": "^3.0.2",
@@ -52,10 +55,12 @@
     "postcss-px2rem": "^0.3.0",
     "postcss-pxtorem": "^4.0.1",
     "sass-loader": "^7.1.0",
+    "svg-inline-loader": "^0.8.0",
     "svg-sprite-loader": "^4.1.6",
     "vue-click-outside": "^1.0.7",
     "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.5.0"
+    "webpack-bundle-analyzer": "^3.5.0",
+    "webpack-cli": "^3.3.8"
   },
   "postcss": {
     "plugins": {
