--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
     "qrcodejs2": "0.0.2",
-    "vant": "^2.0.0-beta.5",
+    "vant": "^2.2.1",
     "vconsole": "^3.3.0",
     "vee-validate": "^3.0.5",
     "vue": "^2.6.10",
