--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.0.3",
     "compression-webpack-plugin": "^3.0.0",
+    "conventional-changelog-cli": "^2.0.23",
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
