--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "better-scroll": "^1.15.2",
     "concurrently": "^4.1.2",
     "core-js": "^2.6.5",
+    "purgecss-webpack-plugin": "^1.6.0",
     "qrcodejs2": "0.0.2",
     "vant": "^2.2.1",
     "vee-validate": "^3.0.5",
