--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "cz-conventional-changelog": "^3.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "mockjs": "^1.0.1-beta3",
+    "mockjs": "^1.1.0",
     "node-sass": "^4.9.0",
     "postcss-px2rem": "^0.3.0",
     "postcss-pxtorem": "^4.0.1",
