--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     }
   },
   "dependencies": {
+    "@vue/composition-api": "^0.5.0",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
