--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-scroll": "^2.0.7",
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
     "mitt": "^2.1.0",
