--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "mockjs": "^1.1.0",
-    "node-sass": "^4.12.0",
     "postcss-pxtorem": "^5.1.1",
+    "sass": "^1.49.9",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^5.2.1",
     "vue-click-outside": "^1.1.0"
