--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "lib-flexible": "^0.3.2",
     "mitt": "^2.1.0",
+    "sass": "^1.49.9",
     "vant": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -34,7 +35,6 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "mockjs": "^1.1.0",
-    "node-sass": "^4.12.0",
     "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^5.2.1",
